fix gap

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -28,7 +28,7 @@
     justify-content: center;
     align-items: center;
     gap: 50vw;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.116);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.048);
   }
   .navbar-menu {
     margin: 0;
